--- a/Alain Nkouka/html/indexFrancais.html
+++ b/Alain Nkouka/html/indexFrancais.html
@@ -33,47 +33,50 @@
       <!-- Titre de l'application-->
 
       <nav class="conne">
-        <div class="alain">
-          <form action="connexionfrancais.html" method="POST">
-            <div class="email">
 
-              <div class="label">
-                <label class="Email">Email</label>
-                <input type="email" name="email" placeholder="alicia@smallworld.fr" required class="email">
-                <!----  Veuillez saisir votre Email Pour etre connecter au site//-->
+        <form action="connexionfrancais.html" method="POST">
 
-
-                <label class="Mot">Mot de Passe</label>
-                <input type="password" name="password" placeholder="***********************" required minlength="8"
-                  maxlength="15" required class="email">
-
-                <input type="submit" value="connexion" id="" class="sub">
-              </div>
+          <div class="email">
+            <div class="label">
+              <label class="Email">Email</label>
+              <input type="email" name="email" placeholder="alicia@smallworld.fr" required class="email">
+              <!----  Veuillez saisir votre Email Pour etre connecter au site//-->
 
 
-              <div class="garder">
+              <label class="Mot">Mot de Passe</label>
+              <input type="password" name="password" placeholder="***********************" required minlength="8"
+                maxlength="15" required class="email">
+              <!-- input de mot de passe -->
 
-                <label class="gs">garder ma session active</label>
-                <input type="checkbox" name="qualites" value=" garder ma session active" class="gsd">
-
-                <a href="moddepasseoubliefrancais.html">
-                  <label class="toto">mot de passe oublie ? </label></a>
-              </div>
-
-
-
-              <a href="indexanglais.html">
-                <img title="traduire en anglais" src="../image/drapeauA.jpg" class="francais">
-              </a>
+              <input type="submit" value="connexion" id="" class="sub">
             </div>
-        </div>
+          </div>
+          <!-- button de connexion -->
 
-        <!--  Mot de passe oublier voici le lien qui relie 
+          <div class="garder">
+            <label class="gs">garder ma session active</label>
+            <input type="checkbox" name="qualites" value=" garder ma session active" class="gsd">
+            <!-- garder ma session active -->
+
+            <a href="moddepasseoubliefrancais.html">
+              <label class="toto">mot de passe oublie ? </label></a>
+          </div>
+          <!-- mot de passe oublier  -->
+
+
+
+          <a href="indexanglais.html">
+            <img title="traduire en anglais" src="../image/drapeauA.jpg" class="francais">
+          </a>
+    </div>
+    </div>
+
+    <!--  Mot de passe oublier voici le lien qui relie 
                     la page index.html et la passe moddepasseoublier.html celà-->
 
-        </form>
+    </form>
 
-      </nav>
+    </nav>
     </div>
 
   </header>
