--- a/Alain Nkouka/html/indexFrancais.html
+++ b/Alain Nkouka/html/indexFrancais.html
@@ -42,7 +42,6 @@
               <input type="email" name="email" placeholder="alicia@smallworld.fr" required class="email">
               <!----  Veuillez saisir votre Email Pour etre connecter au site//-->
 
-
               <label class="Mot">Mot de Passe</label>
               <input type="password" name="password" placeholder="***********************" required minlength="8"
                 maxlength="15" required class="email">
@@ -52,6 +51,7 @@
             </div>
           </div>
           <!-- button de connexion -->
+          
 
           <div class="garder">
             <label class="gs">garder ma session active</label>
@@ -68,23 +68,23 @@
           <a href="indexanglais.html">
             <img title="traduire en anglais" src="../image/drapeauA.jpg" class="francais">
           </a>
-    </div>
-    </div>
 
-    <!--  Mot de passe oublier voici le lien qui relie 
+
+        </form>
+      </nav>
+    </div>
+  </header>
+
+
+  <!--  Mot de passe oublier voici le lien qui relie 
                     la page index.html et la passe moddepasseoublier.html celà-->
 
-    </form>
 
-    </nav>
-    </div>
-
-  </header>
 
   <!-- slogan du small world-->
 
 
-  <footer>
+  <section>
 
     <h2><kbd> INSCRIPTION </kbd></h2>
 
@@ -169,7 +169,7 @@
     </div> -->
 
 
-  </footer>
+  </section>
 
 </body>
 
