--- a/Alain Nkouka/html/indexanglais.html
+++ b/Alain Nkouka/html/indexanglais.html
@@ -66,9 +66,7 @@
           <!--  Mot de passe oublier voici le lien qui relie 
                     la page index.html et la passe moddepasseoublier.html celà-->
 
-
-
-          <a href="indexanglais.html">
+          <a href="indexFrancais.html">
             <img title="traduire en anglais" src="../image/drapeauA.jpg" class="francais">
           </a>
 
@@ -80,17 +78,17 @@
   <!-- slogan du small world-->
 
 
-  <h2><kbd> Registration </kbd></h2>
+
   <section>
+    <h2><kbd> Registration </kbd></h2>
     <!-- Titre pour s'inscrire sur le site small world-->
 
     <form action="connexionfrancais.html" method="POST">
+
       <div class="formulaire">
         <br>
         <input class="champ" type="text" name="Nom" placeholder="Last name" required>
         <!--// Veuillez saisir Mot de Email  //-->
-
-
 
         <input class="champ" type="text" name="Prénom" placeholder="Grist name" required>
       </div>
@@ -109,7 +107,6 @@
         <input class="champ" type="password" name="Mot de Passe" placeholder="password" minlength="8" maxlength="12"
           required>
         <!--// Veuillez saisir votre Mot de Passe //-->
-
 
         <input class="champ" type="password" name="Mot de passe" placeholder="Confirm your password" minlength="8"
           maxlength="12" required>
