--- a/Alain Nkouka/html/indexanglais.html
+++ b/Alain Nkouka/html/indexanglais.html
@@ -67,7 +67,7 @@
                     la page index.html et la passe moddepasseoublier.html celà-->
 
           <a href="indexFrancais.html">
-            <img title="traduire en anglais" src="../image/drapeauA.jpg" class="francais">
+            <img title="traduire en Français" src="../image/drapeauf.png" class="francais">
           </a>
 
         </form>
