--- a/Alain Nkouka/html/indexFrancais.html
+++ b/Alain Nkouka/html/indexFrancais.html
@@ -26,11 +26,10 @@
   <header>
 
     <div class="header">
-      <a href="#">
-        <h1 class="Small">Small World</h1>
-      </a>
-
+      
+        <h1 >Small World</h1>
       <!-- Titre de l'application-->
+
 
       <nav class="conne">
 
@@ -42,7 +41,7 @@
               <input type="email" name="email" placeholder="alicia@smallworld.fr" required class="email">
               <!----  Veuillez saisir votre Email Pour etre connecter au site//-->
 
-              <label class="Mot">Mot de Passe</label>
+              <label class="MotDepasse">Mot de Passe</label>
               <input type="password" name="password" placeholder="***********************" required minlength="8"
                 maxlength="15" required class="email">
               <!-- input de mot de passe -->
@@ -54,8 +53,8 @@
           
 
           <div class="garder">
-            <label class="gs">garder ma session active</label>
-            <input type="checkbox" name="qualites" value=" garder ma session active" class="gsd">
+            <label class="GarderSession">garder ma session active</label>
+            <input type="checkbox" name="qualites" value=" garder ma session active" class="GarderMaSessionActive">
             <!-- garder ma session active -->
 
             <a href="moddepasseoubliefrancais.html">
