--- a/Alain Nkouka/html/indexanglais.html
+++ b/Alain Nkouka/html/indexanglais.html
@@ -27,9 +27,9 @@
   <header>
 
     <div class="header">
-      <a href="#">
-        <h1 class="Small">Small World </h1>
-      </a>
+   
+        <h1>Small World </h1>
+
 
       <!-- Titre de l'application-->
 
@@ -51,23 +51,23 @@
 
               <input type="submit" value="connexion" id="" class="sub">
             </div>
-          </div>
+          
           <!-- button de connexion -->
 
 
           <div class="garder">
-            <label class="gs">Keep me logged in</label>
-            <input type="checkbox" name="qualites" value=" garder ma session active" class="gsd">
+            <label class="GarderSession">Keep me logged in</label>
+            <input type="checkbox" name="qualites" value=" garder ma session active" class="GarderMaSessionActive">
             <!-- garder ma session active -->
 
             <a href="moddepasseoubliefrancais.html">
               <label class="toto">Forgot your password ?</label></a>
-          </div>
+          </div></div>
           <!--  Mot de passe oublier voici le lien qui relie 
                     la page index.html et la passe moddepasseoublier.html celà-->
 
           <a href="indexFrancais.html">
-            <img title="traduire en Français" src="../image/drapeauf.png" class="francais">
+            <img title="traduire en Français" src="../image/drapeauf.png" class="LogoDrapeau">
           </a>
 
         </form>
