--- a/Alain Nkouka/html/indexanglais.html
+++ b/Alain Nkouka/html/indexanglais.html
@@ -44,7 +44,7 @@
               <input type="email" name="email" placeholder="alicia@smallworld.fr" required class="email">
               <!----  Veuillez saisir votre Email Pour etre connecter au site//-->
 
-              <label class="Mot">Password</label>
+              <label class="MotDepasse">Password</label>
               <input type="password" name="password" placeholder="***********************" required minlength="8"
                 maxlength="15" required class="email">
               <!-- input de mot de passe -->
