--- a/Alain Nkouka/html/indexFrancais.html
+++ b/Alain Nkouka/html/indexFrancais.html
@@ -123,7 +123,7 @@
       <!--// Veuillez comfirmation du Mot de Passe du site //-->
 
 
-      <div class="date"><br>Date de naissance:
+      <div class="date">Date de naissance:
         <p class="para"><input required type="date" max="2050-01-01" min="1930-01-01"></p>
       </div>
       <!-- la date de naissance-->
@@ -142,18 +142,6 @@
       <!--Veuille cliquer ici pour s'inscrire à smal world-->
 
     </form>
-
-
-
-    <!-- <address>
-      <div>AIGLE d'ORIENT</div>
-      <div>SIRET : 848 380 721 00011 - RCS PARIS</div>
-      <div>Gérant : M. LIU Yishan</div>
-      <div> Adresse : 7 rue (Marguerite) de Rochechouart, 75009 PARIS</div>
-      <div><a href="tel: +33950775335"><span class="symboleIcone">&#9742;</span> : 09 50 77 53 35</a></div>
-      <div><a href="mailto: anton.sandu68@mail.ru"><span  class="symboleIcone">&#9993;</span> : anton.sandu68@mail.ru</a></div> 
-  </address> -->
-
 
 
     <!-- <div class="message">
