--- a/Alain Nkouka/html/indexanglais.html
+++ b/Alain Nkouka/html/indexanglais.html
@@ -27,8 +27,8 @@
   <header>
 
     <div class="header">
-   
-        <h1>Small World </h1>
+
+      <h1>Small World </h1>
 
 
       <!-- Titre de l'application-->
@@ -51,18 +51,19 @@
 
               <input type="submit" value="connexion" id="" class="sub">
             </div>
-          
-          <!-- button de connexion -->
+
+            <!-- button de connexion -->
 
 
-          <div class="garder">
-            <label class="GarderSession">Keep me logged in</label>
-            <input type="checkbox" name="qualites" value=" garder ma session active" class="GarderMaSessionActive">
-            <!-- garder ma session active -->
+            <div class="garder">
+              <label class="GarderSession">Keep me logged in</label>
+              <input type="checkbox" name="qualites" value=" garder ma session active" class="GarderMaSessionActive">
+              <!-- garder ma session active -->
 
-            <a href="moddepasseoubliefrancais.html">
-              <label class="toto">Forgot your password ?</label></a>
-          </div></div>
+              <a href="moddepasseoubliefrancais.html">
+                <label class="toto">Forgot your password ?</label></a>
+            </div>
+          </div>
           <!--  Mot de passe oublier voici le lien qui relie 
                     la page index.html et la passe moddepasseoublier.html celà-->
 
