--- a/Alain Nkouka/html/indexFrancais.html
+++ b/Alain Nkouka/html/indexFrancais.html
@@ -48,23 +48,23 @@
 
               <input type="submit" value="connexion" id="" class="sub">
             </div>
-          
-          <!-- button de connexion -->
+
+            <!-- button de connexion -->
 
 
-          <div class="garder">
-            <label class="GarderSession">garder ma session active</label>
-            <input type="checkbox" name="qualites" value=" garder ma session active" class="GarderMaSessionActive">
-            <!-- garder ma session active -->
+            <div class="garder">
+              <label class="GarderSession">garder ma session active</label>
+              <input type="checkbox" name="qualites" value=" garder ma session active" class="GarderMaSessionActive">
+              <!-- garder ma session active -->
 
-            <a href="moddepasseoubliefrancais.html">
-              <label class="toto">mot de passe oublie ? </label></a>
-          </div>
+              <a href="moddepasseoubliefrancais.html">
+                <label class="toto">mot de passe oublie ? </label></a>
+            </div>
           </div>
           <!-- mot de passe oublier  -->
 
 
-         
+
           <a href="indexanglais.html">
             <img title="traduire en anglais" src="../image/drapeauA.jpg" class="LogoDrapeau"></a>
 
@@ -123,8 +123,8 @@
       <!--// Veuillez comfirmation du Mot de Passe du site //-->
 
 
-      <div class="date">Date de naissance:
-        <p class="para"><input required type="date" max="2050-01-01" min="1930-01-01"></p>
+      <div class="date"><br>Date de naissance:
+        <p1 class="para"><input required type="date" max="2050-01-01" min="1930-01-01"></p1>
       </div>
       <!-- la date de naissance-->
 
