--- a/Alain Nkouka/html/indexanglais.html
+++ b/Alain Nkouka/html/indexanglais.html
@@ -15,7 +15,7 @@
 
   <title>small world</title>
 
-  <link rel=" stylesheet" type="text/css" href="../css/stylesfranais.css">
+  <link rel=" stylesheet" type="text/css" href="../css/stylesanglais.css">
   <!-- lien de la page index.html et la page styles.css-->
 
 
