--- a/Alain Nkouka/html/confirmationparemailFrancais.html
+++ b/Alain Nkouka/html/confirmationparemailFrancais.html
@@ -29,7 +29,7 @@
     </h2>
     <!-- Titre pour modifier le mot de passe sur le site small world-->
 
-
+     <div class="form">
     <form action="connexionfrancais.html" method="POST">
       <div class=" formulaire">
         <input class="champ" type="text" name="Email" placeholder="Confirmez le code..." minlength="8" maxlength="12"
@@ -43,6 +43,7 @@
       </div>
       <!-- touche de s'inscrire sur l'appli-->
     </form>
+    </div>
   </nav>
 
 
