--- a/Alain Nkouka/html/confirmationparemailanglais.html
+++ b/Alain Nkouka/html/confirmationparemailanglais.html
@@ -27,21 +27,24 @@
     <h2>
       <kbd> Enter the confirmation code received by Email</kbd></h2>
     <!-- Titre pour modifier le mot de passe sur le site small world-->
-    
-    <form action="connexionanglais.html" method="POST">
 
-      <div class=" formulaire">
-        <input class="champ" type="text" name="Email" placeholder="Confirm the code..." required>
-      </div>
-      <!--// Mot de Passe du site //-->
+    <div class="form">
 
-      <div>
+      <form action="connexionanglais.html" method="POST">
 
-        <button type="submit" class="submit">
-          Validate
-      </div>
-      <!-- touche de s'inscrire sur l'appli-->
-    </form>
+        <div class=" formulaire">
+          <input class="champ" type="text" name="Email" placeholder="Confirm the code..." required>
+        </div>
+        <!--// Mot de Passe du site //-->
+
+        <div>
+
+          <button type="submit" class="submit">
+            Validate
+        </div>
+        <!-- touche de s'inscrire sur l'appli-->
+      </form>
+    </div>
   </nav>
 
 
