--- a/Alain Nkouka/html/confirmationparemailanglais.html
+++ b/Alain Nkouka/html/confirmationparemailanglais.html
@@ -33,7 +33,7 @@
       <form action="connexionanglais.html" method="POST">
 
         <div class=" formulaire">
-          <input class="champ" type="text" name="Email" placeholder="Confirm the code..." required>
+          <input class="champs" type="text" name="Email" placeholder="Confirm the code..." required>
         </div>
         <!--// Mot de Passe du site //-->
 
