--- a/Alain Nkouka/html/indexFrancais.html
+++ b/Alain Nkouka/html/indexFrancais.html
@@ -23,66 +23,46 @@
 
 
 <body>
+
   <header>
+      <h1>Small world </h1>
+  
 
-    <div class="header">
+    <span class="span">
+      <form action="connexionfrancais.html" method="POST">
 
-      <h1>Small World</h1>
-      <!-- Titre de l'application-->
+        <table class=" table">
+          <tr>
+            <td>Email</td>
+            <td> Mot de passe</td>
+          </tr>
+          <tr>
+            <td> <input type="email" name="email" placeholder="alicia@yahoo.fr" required></td>
 
+            <td> <input type="password" name="password" placeholder="*************" required minlength="8"
+                maxlength="15"></td>
 
-      <nav class="conne">
-
-        <form action="connexionfrancais.html" method="POST">
-
-          <div class="email">
-            <div class="label">
-              <label class="Email">Email</label>
-              <input type="email" name="email" placeholder="alicia@smallworld.fr" required class="email">
-              <!----  Veuillez saisir votre Email Pour etre connecter au site//-->
-
-              <label class="MotDepasse">Mot de Passe</label>
-              <input type="password" name="password" placeholder="***********************" required minlength="8"
-                maxlength="15" required class="email">
-              <!-- input de mot de passe -->
-
-              <input type="submit" value="connexion" id="" class="sub">
-            </div>
-
-            <!-- button de connexion -->
-
-
-            <div class="garder">
-              <label class="GarderSession">garder ma session active</label>
+            <td> <input type="submit" value="connexion" id=""></td>
+          </tr>
+          <tr>
+            <td> <label class="GarderSession">garder ma session active</label>
               <input type="checkbox" name="qualites" value=" garder ma session active" class="GarderMaSessionActive">
-              <!-- garder ma session active -->
-
-              <a href="moddepasseoubliefrancais.html">
-                <label class="toto">mot de passe oublie ? </label></a>
-            </div>
-          </div>
-          <!-- mot de passe oublier  -->
+            </td>
 
 
-
-          <a href="indexanglais.html">
-            <img title="traduire en anglais" src="../image/drapeauA.jpg" class="LogoDrapeau"></a>
-
+            <td><a href="moddepasseoubliefrancais.html" class="mdpo">Mot de passe oublie?</a></td>
+          </tr>
 
 
-        </form>
-      </nav>
-    </div>
+        </table>
+      </form>
+      </div>
+    </span>
+
+    <a href="indexanglais.html">
+      <img class="LogoDrapeau" title="traduire en Anglais" src="../image/drapeauA.jpg">
+    </a>
   </header>
-
-
-  <!--  Mot de passe oublier voici le lien qui relie 
-                    la page index.html et la passe moddepasseoublier.html celà-->
-
-
-
-  <!-- slogan du small world-->
-
 
   <section>
 
@@ -90,34 +70,36 @@
 
     <!-- Titre pour s'inscrire sur le site small world-->
 
+
+
     <form action="connexionfrancais.html" method="POST">
+
       <div class="formulaire">
         <br>
-        <input class="champ" type="text" name="Nom" placeholder="Nom" required>
+        <input class="champs" type="text" name="Nom" placeholder="Nom" required>
         <!--// Veuillez saisir Mot de Email  //-->
 
-
-
-        <input class="champ" type="text" name="Prénom" placeholder="Prénom" required>
+        <input class="champs" type="text" name="Prénom" placeholder="Prénom" required>
       </div>
       <!--// tapez votre Prénoms //-->
 
+
       <div class="formulaire">
-        <br><input class=" champ" type="email" name="Email" placeholder="Email" required>
+        <br><input class=" champs" type="email" name="email" placeholder="Email" required>
         <!----Veuillez Saisir votre Email Pour etre connecter au site//-->
 
-        <input class="champ" type="email" name="Email" placeholder="Confirmer votre Email" required>
+        <input class="champs" type="email" name="Email" placeholder="Confirmer votre email" required>
       </div>
       <!--// Veuillez confirmer votre Mot de Passe//-->
 
 
       <div class=" formulaire"><br>
-        <input class="champ" type="password" name="Mot de Passe" placeholder="Mot de Passe" minlength="8" maxlength="12"
-          required>
+        <input class="champs" type="password" name="Mot de passe" placeholder="Mot de passe" minlength="8"
+          maxlength="12" required>
         <!--// Veuillez saisir votre Mot de Passe //-->
 
 
-        <input class="champ" type="password" name="Mot de passe" placeholder="Confirmer le Mot de Passe" minlength="8"
+        <input class="champs" type="password" name="Mot de passe" placeholder="Confirmer le mot de passe" minlength="8"
           maxlength="12" required>
       </div>
       <!--// Veuillez comfirmation du Mot de Passe du site //-->
@@ -128,7 +110,8 @@
       </div>
       <!-- la date de naissance-->
 
-      <div class="sex"><br> Sexe: <input required type="radio" name="sex" value="H" checked required>Homme
+
+      <div class="sexe"><br> Sexe: <input required type="radio" name="sex" value="H" checked required>Homme
         <INPUT type="radio" name="sex" value="F"> Femme
       </div>
       <!-- séléction du sexe-->
@@ -136,28 +119,31 @@
 
 
 
-      <div class="connexion"><br>
+      <div class="INSCRIPTION"><br>
         <kbd><input type="submit" value="S'inscrire" class="inscrire"></kbd>
       </div>
       <!--Veuille cliquer ici pour s'inscrire à smal world-->
 
     </form>
-
-
-    <!-- <div class="message">
-      <small>
-        <ol>Il existe des tas de façons de rester en contact avec vos proches,</ol>
-        <ol>
-          <font color="#0000FF">
-            <kdb>Small world</kdb>
-          </font> est un petit moyen sympa de garder
-        </ol>
-        <ol>contact avec le monde; C'est super facile à utiliser</ol>
-      </small>
-    </div> -->
-
-
   </section>
+  <footer>
+    <div class="message">
+
+      <ul>
+
+        <ol>Il existe des tas de façons de rester en contact avec vos proches</ol>
+
+        <ol>Small world est un petit moyen sympa de garder contact avec</ol>
+        <ol>le monde; C'est super facile à utiliser</ol>
+      </ul>
+    </div>
+
+  </footer>
+
+
+
+
+
 
 </body>
 
