--- a/Alain Nkouka/html/moddepasseoublieanglais.html
+++ b/Alain Nkouka/html/moddepasseoublieanglais.html
@@ -17,7 +17,7 @@
         <h1> Small World</h1>
         <!-- Titre de l'application-->
     </header>
-    <hr>
+    
 
 
 
@@ -28,28 +28,28 @@
     <main>
         <form action="confirmationparemailanglais.html" method="POST">
 
-            <div class="forr">
+            <div class="form">
 
                 <div class="formulaire">
-                    <input class=" champ" type="email" name="email" placeholder="Email" required>
+                    <input class=" champs" type="email" name="email" placeholder="Email" required>
 
                     <!-- Masquer le mot de passe voilà les explication pour les ***-->
                     <!----  Email Pour etre connecter au site//-->
 
-                    <input class="champ" type="email" name="email" placeholder="Confirm your email" required>
+                    <input class="champs" type="email" name="email" placeholder="Confirm your email" required>
                 </div>
                 <!--// Mot de Passe du site //-->
 
 
 
                 <div class="formulaire">
-                    <input class="champ" type="password" name="password" placeholder=" New password" minlength="8"
+                    <input class="champs" type="password" name="password" placeholder=" New password" minlength="8"
                         maxlength="15" required>
                     <!-- Masquer le mot de passe voilà les explication pour les ***-->
                     <!----  Email Pour etre connecter au site//-->
 
                     <td></td>
-                    <input class="champ" type="password" name="password" placeholder="Confirm new password"
+                    <input class="champs" type="password" name="password" placeholder="Confirm new password"
                         minlength="8" maxlength="15" required>
                 </div>
                 <!--// Mot de Passe du site //-->
