--- a/Alain Nkouka/html/confirmationparemailFrancais.html
+++ b/Alain Nkouka/html/confirmationparemailFrancais.html
@@ -32,7 +32,7 @@
      <div class="form">
     <form action="connexionfrancais.html" method="POST">
       <div class=" formulaire">
-        <input class="champ" type="text" name="Email" placeholder="Confirmez le code..." minlength="8" maxlength="12"
+        <input class="champs" type="text" name="Email" placeholder="Confirmez le code..." minlength="8" maxlength="12"
           required>
       </div>
       <!--// Mot de Passe du site //-->
