--- a/Alain Nkouka/html/moddepasseoubliefrancais.html
+++ b/Alain Nkouka/html/moddepasseoubliefrancais.html
@@ -17,8 +17,7 @@
         <h1> Small World</h1>
         <!-- Titre de l'application-->
     </header>
-    <hr>
-
+   
 
 
     <nav>
@@ -30,10 +29,10 @@
 
             <form action="confirmationparemailFrancais.html" method="POST">
 
-                <div class="forr">
+                <div class="form">
 
                     <div class="formulaire">
-                        <input class=" champ" type="email" name="email" placeholder="Email" required>
+                        <input class=" champs" type="email" name="email" placeholder="Email" required>
 
 
                         <!-- Masquer le mot de passe voilà les explication pour les ***-->
@@ -41,7 +40,7 @@
 
 
 
-                        <input class="champ" type="email" name="email" placeholder="Confirmer votre Email" required>
+                        <input class="champs" type="email" name="email" placeholder="Confirmer votre Email" required>
 
                     </div>
                     <!--// Mot de Passe du site //-->
@@ -50,7 +49,7 @@
 
                     <div class="formulaire">
 
-                        <input class="champ" type="password" name="password" placeholder=" Nouveaux mot de Passe"
+                        <input class="champs" type="password" name="password" placeholder=" Nouveaux mot de Passe"
                             minlength="8" maxlength="15" required>
 
 
@@ -59,7 +58,7 @@
 
 
                         <td></td>
-                        <input class="champ" type="password" name="password" placeholder="Confirmer le Mot de Passe"
+                        <input class="champs" type="password" name="password" placeholder="Confirmer le Mot de Passe"
                             minlength="8" maxlength="15" required>
 
                     </div>
