--- a/Alain Nkouka/html/confirmationparemailFrancais.html
+++ b/Alain Nkouka/html/confirmationparemailFrancais.html
@@ -25,7 +25,7 @@
 
   <nav>
     <h2>
-      <kbd> Entrez le code de confirmation réçu par email </kbd>
+      <kbd> Entrez le code de confirmation reçu par email </kbd>
     </h2>
     <!-- Titre pour modifier le mot de passe sur le site small world-->
 
