--- a/Alain Nkouka/html/moddepasseoubliefrancais.html
+++ b/Alain Nkouka/html/moddepasseoubliefrancais.html
@@ -68,7 +68,7 @@
 
                     <div class="Record">
                         <a href="confirmationparemailanglais.html"><button type="submit" class="submit">
-                                Enregistre</button>
+                                Enregistrer</button>
                         </a>
                     </div>
                     <!-- le bouton qui nous permet d'enregistré le nouveau mot de passe 
