--- a/Alain Nkouka/html/indexanglais.html
+++ b/Alain Nkouka/html/indexanglais.html
@@ -33,24 +33,25 @@
 
         <table class=" table">
           <tr>
-            <td>Email</td>
-            <td>password</td>
+            <td class="email">Email</td>
+            <td class="motdepasse">password</td>
           </tr>
           <tr>
-            <td> <input type="email" name="email" placeholder="alicia@yahoo.fr" required></td>
+            
+            <td> <input type="email" name="email" placeholder="alicia@yahoo.fr" required class="inputEmail"></td>
 
             <td> <input type="password" name="password" placeholder="*************" required minlength="8"
-                maxlength="15"></td>
+                maxlength="15"class="inputMotdepasse"></td>
 
             <td> <input type="submit" value="connexion" id=""></td>
           </tr>
           <tr>
             <td> <label class="GarderSession">Keep me logged in</label>
-              <input type="checkbox" name="qualites" value=" garder ma session active" class="GarderMaSessionActive">
+              <input type="checkbox" name="qualites" value=" garder ma session active" class="inputGarderMaSessionActive">
             </td>
 
 
-            <td><a href="moddepasseoublieanglais.html" class="mdpo">Forgot your password?</a></td>
+            <td><a href="moddepasseoubliefrancais.html" class="motdepasseoublier">Forgot your password?</a></td>
           </tr>
 
 
