--- a/Alain Nkouka/html/indexFrancais.html
+++ b/Alain Nkouka/html/indexFrancais.html
@@ -25,8 +25,8 @@
 <body>
 
   <header>
-      <h1>Small world </h1>
-  
+    <h1>Small world </h1>
+
 
     <span class="span">
       <form action="connexionfrancais.html" method="POST">
@@ -37,17 +37,18 @@
             <td class="motdepasse"> Mot de passe</td>
           </tr>
           <tr>
-            
+
             <td> <input type="email" name="email" placeholder="alicia@yahoo.fr" required class="inputEmail"></td>
 
             <td> <input type="password" name="password" placeholder="*************" required minlength="8"
-                maxlength="15"class="inputMotdepasse"></td>
+                maxlength="15" class="inputMotdepasse"></td>
 
             <td> <input type="submit" value="connexion" id=""></td>
-          </tr>
+
           <tr>
             <td> <label class="GarderSession">garder ma session active</label>
-              <input type="checkbox" name="qualites" value=" garder ma session active" class="inputGarderMaSessionActive">
+              <input type="checkbox" name="qualites" value=" garder ma session active"
+                class="inputGarderMaSessionActive">
             </td>
 
 
@@ -57,7 +58,7 @@
 
         </table>
       </form>
-      </div>
+
     </span>
 
     <a href="indexanglais.html">
@@ -107,7 +108,7 @@
 
 
       <div class="date"><br>Date de naissance:
-        <p1 class="para"><input required type="date" max="2050-01-01" min="1930-01-01"></p1>
+        <input required type="date" max="2050-01-01" min="1930-01-01"></p1>
       </div>
       <!-- la date de naissance-->
 
